[package]
name = "nix-analyzer-new"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bmrng = "0.5.2"
capnp = "0.20.1"
capnp-rpc = "0.20.2"
dashmap = "6.1.0"
futures = "0.3.31"
ropey = "1.6.1"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
tower-lsp = "0.20.0"

[build-dependencies]
# this must match the version of capnp
capnpc = "0.20.1"
