[package]
name = "nix-analyzer-new"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bmrng = "0.5.2"
capnp = "0.20.1"
capnp-rpc = "0.20.2"
dashmap = "6.1.0"
expect-test = "1.5.1"
futures = "0.3.31"
itertools = "0.14.0"
lazy-regex = "3.4.1"
regex = "1.11.1"
rnix = "0.12.0"
ropey = "1.6.1"
rowan = "0.15.15"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.135"
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
tower-lsp = "0.20.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
# this must match the version of capnp
capnpc = "0.20.1"
