[package]
name = "nix-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bmrng = "0.5.2"
console-subscriber = "0.4.1"
crossbeam = "0.8.4"
dashmap = "6.1.0"
expect-test = "1.5.1"
futures = "0.3.31"
indoc = "2.0.6"
itertools = "0.14.0"
lazy-regex = "3.4.1"
lazy_static = "1.5.0"
lru = "0.13.0"
lsp-server = "0.7.8"
lsp-types = "0.97.0"
prost = "0.13.5"
regex = "1.11.1"
rnix = "0.12.0"
ropey = "1.6.1"
rowan = "0.15.15"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.135"
test-log = { version = "0.2.17", features = ["trace"] }
tokio = { version = "1.41.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.12.3"
