[package]
name = "eval"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { git = "https://github.com/salsa-rs/salsa.git", package = "salsa-2022" }
sorted-vec = "0.8.3"
rnix = { git = "https://github.com/nix-community/rnix-parser" }
ustr = "1.0.0"
expect-test = "1.4.1"
derive-new = "0.6.0"
